--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,12 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+# config/routes.yaml
+dashboard:
+  path: /admin
+  controller: App\Controller\Admin\DashboardController::index
+
+login:
+  path: /login
+  controller: App\Controller\LoginController::index
+
+logout:
+  path: /logout
+  controller: /login
