--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,12 +1,15 @@
-# config/routes.yaml
 dashboard:
   path: /admin
   controller: App\Controller\Admin\DashboardController::index
 
-login:
+app_login:
   path: /login
   controller: App\Controller\LoginController::index
 
 logout:
   path: /logout
   controller: /login
+
+api_platform:
+  resource: '.'
+  type: api_platform
